tests/expectations/compiler/integers/u16/no_space_between_literal.out
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '[', '.', ';', '?', 'as' -- found 'u16'
    --> compiler-test:4:15
     |
   4 |     let i = 1 u16;
     |               ^^^
